# drift

./: .gitignore  README.md  requirements.txt  run.py  setup.cfg  setup.py  test-requirements.txt  tox.ini
drift/: __init__.py  drift.py
tests/: test_drift.py
