[metadata]
name = drift
author = Tom Cammann
author-email = tom.cammann@hp.com
summary = Gerrit change calculator
description-file =
    README.md
home-page = None
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    drift

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1

[entry_points]
console_scripts =
    drift = drift.drift:main
